--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,8 +34,8 @@ jobs:
 
     - name: Install golang-migrate
       run: | 
-       curl -L https://github.com/golang-migrate/migrate/releases/download/v4.18.2/migrate.linux-386.tar.gz | tar xvz
-       sudo mv migrate.linux-amd64 /usr/bin/migrate
+       curl -L https://github.com/golang-migrate/migrate/releases/download/v4.18.2/migrate.linux-amd64.tar.gz | tar xvz
+       sudo mv migrate.linux-amd64 /usr/local/bin/migrate
        which migrate
 
     - name: Run migrations
